Smart CacheDataLoader merge function

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/*
 .eggs/*
 .polus*
 
+experimental/.ipynb_checkpoints/
+ner/.ipynb_checkpoints/
 .ipynb_checkpoints/
 
 # Byte-compiled / optimized / DLL files
