--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build sphinx docs
-        uses: cascode-labs/build-sphinx-action@v0.1.0
+        uses: cascode-labs/build-sphinx-action/action.yml@v0
 
