--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build and Commit
       uses: sphinx-notes/pages@master
+      with:
+        repository_path: docs/
+        documentation_path: source/
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
