--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,6 +33,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pdoc3
+          python -m pip install -r requirements.txt
+          
           
       - name: Build docs
         run: pdoc --html --force --output-dir docs polus
