--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,12 +32,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pdoc3
+          python -m pip install pdoc
           python -m pip install -r requirements.txt
           
           
       - name: Build docs
-        run: pdoc -o docs polus
+        run: |
+          pdoc -o docs polus
+          rm index.html
+          mv polus.html index.html
 
       # Runs a set of commands using the runners shell
       #- name: Reorganize the outputed docs
