--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           pdoc -o docs polus
           rm index.html
-          mv polus.html index.html
+          cp polus.html index.html
 
       # Runs a set of commands using the runners shell
       #- name: Reorganize the outputed docs
